# Ros_Motik

ainex_bringup/scripts/: robot_mouth_talk.py  robot_mouth_talk_node.py
raspberrypi2/motik-master/: CMakeLists.txt  package.xml
raspberrypi2/motik-master/launch/: bringup_emotions_display.launch  emotions_display.launch  emotions_topics.launch  oscillogram_test_sine.launch  oscillogram_topics.launch
raspberrypi2/motik-master/scripts/: emotions_display_node.py  motik_node.py
raspberrypi2/sound-master/: CMakeLists.txt  package.xml
raspberrypi2/sound-master/launch/: sound.launch
raspberrypi2/sound-master/music/: 2.aac
raspberrypi2/sound-master/scripts/: audio_card_check_node.py  audio_card_stream_node.py  audio_level_test_sine.py  sound_node.py  sound_play_osc_node.py
raspberrypi2/sound-master/srv/: CheckAudioCard.srv  PlaySoundWithOscillogram.srv  SoundDuration.srv
raspberrypi2/test-master/: CMakeLists.txt  package.xml
raspberrypi2/test-master/docs/: ROS_ПОНЯТИЯ_И_ЗАПУСК.md  СПИСОК_ИЗМЕНЁННЫХ_ФАЙЛОВ.md
raspberrypi2/test-master/launch/: audio_oscillogram_capture.launch  audio_oscillogram_full.launch  audio_oscillogram_full_usb_mic.launch  mouth_animation_test.launch  mouth_oscillogram_sync.launch  oscillogram_capture_and_plot.launch  oscillogram_plot.launch
raspberrypi2/test-master/scripts/: audio_oscillogram_capture_node.py  mouth_level_test_publisher_node.py  mouth_oscillogram_sync_node.py  oscillogram_plot_node.py
