<?xml version="1.0"?>
<package format="2">
  <name>sound</name>
  <version>0.0.0</version>
  <description>Package sound</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
