<?xml version="1.0"?>
<package format="2">
  <name>test</name>
  <version>0.0.1</version>
  <description>Ноды осциллограммы звука и уровня для анимации рта (три ноды: захват, график, синхронизация рта).</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
